--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
   dio: ^5.0.0
+  google_fonts: ^6.1.0
+  font_awesome_flutter: ^10.5.0
 
 dev_dependencies:
   flutter_test:
