--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dio: ^5.0.0
   google_fonts: ^6.1.0
   font_awesome_flutter: ^10.5.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
